# L2SDK

./: README.md  SDK说明文档.docx
L2_SDK_Demo/: CMakeLists.txt  L2_SDK_Demo.cpp  L2_SDK_Demo.h
L2_SDK_Demo/include/: PointCloud.hpp
L2_SDK_Demo/include/lcm_std_msgs/: Float32.hpp  Float64.hpp  Int8.hpp  Point32.hpp  String.hpp  Time.hpp
L2_SDK_Demo/lib/: liblcm.so.1.4.0
doc/: L2_SDK_demo使用说明.docx  L2_SDK说明文档.docx
l2_sdk/: CMakeLists.txt  HC_serial.cpp  L2DeviceHandle.cpp  L2DeviceHandle.h  base.cpp  base.h  data_struct.h  l2_sdk.cpp  l2_sdk.h
third_tool/: PC端可视化操作指引.docx  arm端可视化demo指引.docx
third_tool/lcm2ros/: .gitignore  CMakeLists.txt  README.md  package.xml
third_tool/lcm2ros/include/: Image.hpp
third_tool/lcm2ros/include/lcm_std_msgs/: Bool.hpp  ChannelFloat32.hpp  ColorRGBA.hpp  Float32MultiArray.hpp  Header.hpp  Int16.hpp  LaserScan.hpp  lcm_utils.h
third_tool/lcm2ros/launch/: lcm2ros.launch  lcm2ros.sh  lcmTunnel.sh
third_tool/lcm2ros/src/: RosPublisher.cpp  RosPublisher.hpp  main.cpp
