<?xml version="1.0"?>
<package>
  <name>lcm2ros</name>
  <version>0.0.0</version>
  <description>The lcm2ros package</description>

  <maintainer email="jx.li@camsense.cn">Zero</maintainer>

  <license>TODO</license>
  
  <!-- The *_depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
